<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="381dp"
            android:layout_height="64dp"

            android:layout_marginStart="30dp"
            android:fontFamily="@font/avanir"
            android:gravity="bottom"
            android:text="@string/it_s_a_big_world"
            android:textColor="#20AE8B"
            android:textSize="25sp" />

        <TextView
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avanir"
            android:gravity="bottom|center"
            android:text="@string/out_there_go_explore"
            android:textColor="#000000"
            android:textSize="55sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/booking"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:contentDescription="@string/hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.888"
        app:srcCompat="@drawable/button_home" />

    <TextView
        android:layout_width="281dp"
        android:layout_height="63dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/booking"
        app:layout_constraintEnd_toEndOf="@+id/booking"
        app:layout_constraintStart_toStartOf="@+id/booking" />


</androidx.constraintlayout.widget.ConstraintLayout>