<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keralaaa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".Home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/welcome"
            android:textColor="#FF20AF8C"
            android:textSize="25sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/avanir"
            android:text="@string/where_do_you_want_to_go"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <SearchView
            android:layout_width="365dp"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:background="@drawable/searching"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:fontFamily="@font/avanir"
            android:text="@string/explore_cities"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="552dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/avanir"
                    android:text="All"
                    android:textColor="#5C000000"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/avanir"
                    android:text="Popular"
                    android:textColor="#FF20AF8C"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/avanir"
                    android:text="Recommended"
                    android:textColor="#5C000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/avanir"
                    android:text="Most Viewed"
                    android:textColor="#5C000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/avanir"
                    android:text="Explore"
                    android:textColor="#5C000000"
                    android:textSize="20sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal">


                <ImageView
                    android:id="@+id/goldentemple"
                    android:layout_width="251dp"
                    android:layout_height="228dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/amritsar" />

                <ImageView
                    android:id="@+id/tajagra"
                    android:layout_width="251dp"
                    android:layout_height="228dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tajmahal" />

                <ImageView
                    android:id="@+id/mysore"
                    android:layout_width="251dp"
                    android:layout_height="228dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mysorepalace" />

                <ImageView
                    android:id="@+id/kerala"
                    android:layout_width="251dp"
                    android:layout_height="228dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kerala2" />

                <ImageView
                    android:id="@+id/ladhakk"
                    android:layout_width="251dp"
                    android:layout_height="228dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ladakh2" />


            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avanir"
                android:text="Categories"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/hello2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="80dp">

                <ImageView
                    android:id="@+id/mysorecate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"

                    android:src="@drawable/mysorepalace" />

                <ImageView
                    android:id="@+id/ladhakcate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/ladakh2" />

                <ImageView
                    android:id="@+id/keralacate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/kerala2" />

                <ImageView
                    android:id="@+id/tajmahalcate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/tajmahal" />

                <ImageView
                    android:id="@+id/goldencate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/amritsar" />


            </LinearLayout>


        </HorizontalScrollView>


    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="414dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/navigationbg"
        android:gravity="center"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:padding="5sp"
            android:background="@drawable/citybg"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/explore"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:padding="5sp"
            android:src="@drawable/explore" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:padding="5sp"
            android:src="@drawable/category" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:padding="5sp"
            android:src="@drawable/heart" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:padding="5sp"
            android:src="@drawable/user" />


    </LinearLayout>



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/hello2"
        android:background="@drawable/userbg"
        android:src="@drawable/user"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>